--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <form id="loginForm">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" required placeholder="admin">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required placeholder="admin123">
             </div>
             <div class="form-group">
                 <button type="submit">Login</button>
