--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
     <link rel="stylesheet" href="stylePage2.css">
+    <link rel="icon" href="dashboard.png">
 </head>
 <body>
     <h1>Welcome to the Dashboard</h1>
