--- a/signin.html
+++ b/signin.html
@@ -3,18 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 2</title>
+    <title>Sign In</title>
     <link rel="stylesheet" href="stylePage2.css">
     <link rel="icon" href="dashboard.png">
 </head>
 <body>
-    <h1>Welcome to the Dashboard</h1>
-    <button onclick="logout()">Logout</button>
+    <div class="container">
+    <h2>Sign In</h2>
+    <form class="form" id="signInForm">
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Sign In</button>
+      <p id="errorMessage" class="error" style="display: none;">Invalid username or password</p>
+    </form>
+    <div class="link">Don't have an account? <a href="signup.html">Sign Up</a></div>
+  </div>
 
-    <script>
-        function logout() {
-            window.location.href = 'index.html';
-        }
-    </script>
+  <script>
+    const signInForm = document.getElementById("signInForm");
+    const errorMessage = document.getElementById("errorMessage");
+
+    signInForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+    
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      if (username === "admin" && password === "admin123") {
+        localStorage.setItem("username", username);
+
+        window.location.href = "logout.html";
+      } else {
+        errorMessage.style.display = "block";
+        errorMessage.innerText = "Invalid username or password";
+      }
+    });
+  </script>
 </body>
 </html>
