--- a/signin.html
+++ b/signin.html
@@ -11,8 +11,8 @@
     <div class="container">
     <h2>Sign In</h2>
     <form class="form" id="signInForm">
-      <input type="text" id="username" placeholder="Username" required />
-      <input type="password" id="password" placeholder="Password" required />
+      <input type="text" id="username" placeholder="Username: admin" required />
+      <input type="password" id="password" placeholder="Password: admin123" required />
       <button type="submit">Sign In</button>
       <p id="errorMessage" class="error" style="display: none;">Invalid username or password</p>
     </form>
